UV Unwrap changes nonselected uvs #103237

Closed
opened 2022-12-15 11:27:48 +01:00 by Benjamin Sauder · 8 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.35

Blender Version
Broken: version: 3.4.0, branch: blender-v3.4-release, commit date: 2022-12-06 18:46, hash: a95bf1ac01
Worked: 3.3.1

Short description of error
If one works on a selection of a model and runs the uv-unwrap command from the uv editor non-selected/hidden UVs get changed too. It seems the packing part of the unwrap command does not respect the selection flags.

It doesnt happen with every UV layout - but the repro steps should show the issue.

Exact steps for others to reproduce the error

  1. open attached blend file

unwrap_wonky.blend

  1. select the cube and go to edit mode,
  2. and select all faces -> remember uv layout
  3. now select just one face in the 3d view
  4. call unwrap in the UV editor with this face selected
  5. select all faces again in the 3d view -> uv layout of unselected faces have changed
**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.35 **Blender Version** Broken: version: 3.4.0, branch: blender-v3.4-release, commit date: 2022-12-06 18:46, hash: `a95bf1ac01` Worked: 3.3.1 **Short description of error** If one works on a selection of a model and runs the uv-unwrap command from the uv editor non-selected/hidden UVs get changed too. It seems the packing part of the unwrap command does not respect the selection flags. It doesnt happen with every UV layout - but the repro steps should show the issue. **Exact steps for others to reproduce the error** 1. open attached blend file [unwrap_wonky.blend](https://archive.blender.org/developer/F14059195/unwrap_wonky.blend) 2. select the cube and go to edit mode, 3. and select all faces -> remember uv layout 4. now select just one face in the 3d view 5. call unwrap in the UV editor with this face selected 6. select all faces again in the 3d view -> uv layout of unselected faces have changed

Added subscriber: @kioku

Added subscriber: @kioku

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Added subscriber: @Chris_Blackbourn

Added subscriber: @Chris_Blackbourn
Chris Blackbourn self-assigned this 2022-12-16 01:47:30 +01:00

Have repro in debugger.

Have repro in debugger.

This issue was referenced by a6c30e1a0c

This issue was referenced by a6c30e1a0c62041c02f03270a15334d6de22db5e

This issue was referenced by 3dcd999267

This issue was referenced by 3dcd9992676aba2ff7d15872a9f355fdfb626566

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#103237
No description provided.